still trying to fix the same problem

--- a/_posts/2017-08-31-cmpt-276.md
+++ b/_posts/2017-08-31-cmpt-276.md
@@ -2,8 +2,7 @@
 layout: post
 title: "Shoppu (Intro to Software Engineering - CMPT 276)"
 description: "CMPT 276 -"
-categories: projects
-share: true
+categories: [projects]
 ---
 
 https://shoppuapp.herokuapp.com/
