test project, change layout

--- a/_posts/2017-08-31-cmpt-276.md
+++ b/_posts/2017-08-31-cmpt-276.md
@@ -1,8 +1,11 @@
 ---
 layout: post
-title: "Shoppu (Intro to Software Engineering - CMPT 276)"
-description: "CMPT 276 -"
-categories: [projects]
+title: "Shoppu"
+description: "CMPT 276 project"
+categories: projects
+share: true
 ---
+Introduction to Software Engineering (CMPT 276) - Fall 2015
+[demo](https://shoppuapp.herokuapp.com/) [github](https://github.com/automo/276-g16)
 
-https://shoppuapp.herokuapp.com/
+A web application built with Ruby on Rails to connect users to personal shoppers.
