--- a/_posts/2017-08-31-cmpt-470.md
+++ b/_posts/2017-08-31-cmpt-470.md
@@ -8,3 +8,5 @@ share: true
 Web-Based Information Systems (CMPT 470) - Fall 2016  
 [github](https://github.com/terrencewong/470-final-project)
 
+Raccoon Express was designed to be a free web based restaurant point of sale (POS)
+system to create a better experience for customers, servers, kitchen staff, and managers.
